Implement get_rate
This commit moves the rate date from the path to a query param to make
it optional

test
